--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -10,5 +10,10 @@
 		"github": "Github",
 		"facebook": "Facebook",
 		"email": "E-mail"
+	},
+	"hero": {
+		"title": "Kim jesteśmy?",
+		"content": "Tworzymy nowoczesne i dopracowane strony internetowe, które łączą w sobie estetykę z wysoką wydajnością. Dbamy o każdy detal, aby Twoja strona działała szybko i wyglądała świetnie na każdym urządzeniu. Poza tym zajmujemy się konfiguracją i zabezpieczeniami serwerów VPS oraz dedykowanych, zapewniając stabilność i ochronę przed zagrożeniami. Dodatkowo oferujemy kompleksowe wsparcie dla serwerów Counter Strike 1.6 — od konfiguracji AMXX przez tworzenie pluginów, po optymalizacje działania.",
+		"logo_desc": "Front-end, infrastruktura, bezpieczeństwo. Wszystko czego potrzebujesz, w jednym miejscu."
 	}
 }
