--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -13,7 +13,7 @@
 	},
 	"hero": {
 		"title": "Kim jesteśmy?",
-		"content": "Tworzymy nowoczesne i dopracowane strony internetowe, które łączą w sobie estetykę z wysoką wydajnością. Dbamy o każdy detal, aby Twoja strona działała szybko i wyglądała świetnie na każdym urządzeniu. Poza tym zajmujemy się konfiguracją i zabezpieczeniami serwerów VPS oraz dedykowanych, zapewniając stabilność i ochronę przed zagrożeniami. Dodatkowo oferujemy kompleksowe wsparcie dla serwerów Counter Strike 1.6 — od konfiguracji AMXX przez tworzenie pluginów, po optymalizacje działania.",
+		"content": "Tworzymy nowoczesne i dopracowane strony internetowe, które łączą estetykę z wydajnością. Każdy projekt traktujemy indywidualnie – zależy nam, żeby Twoja strona nie tylko wyglądała świetnie, ale też działała szybko i bez problemów na każdym urządzeniu. Zwracamy uwagę na szczegóły – od przejrzystego układu, przez dobre wrażenia użytkownika, po szybkie ładowanie i gotowość pod SEO. Nie ma u nas przypadkowych rozwiązań – wszystko jest przemyślane i dopasowane do Twoich potrzeb. Poza stronami ogarniamy też konfigurację i administrację serwerów VPS oraz dedykowanych. Ustawiamy wszystko tak, żeby działało stabilnie, bezpiecznie i bez konieczności grzebania w terminalu za każdym razem, gdy coś pójdzie nie tak. Robimy również boty i serwery Discord.",
 		"logo_desc": "Front-end, infrastruktura, bezpieczeństwo. Wszystko czego potrzebujesz, w jednym miejscu."
 	}
 }
