feat: offer section

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,6 +14,6 @@
 	"hero": {
 		"title": "Who are we?",
 		"content": "We create modern and refined websites that combine aesthetics with high performance. We pay attention to every detail to ensure your site runs fast and looks great on every device. Additionally, we handle VPS and dedicated server configuration and security, providing stability and protection against threats.",
-		"logo_desc": "Front-end, infrastructure, security. Everything you need, in one place."
+		"logo_desc": "Front-end, infrastructure, security.\nEverything you need, in one place."
 	}
 }
