feat: message component

--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -29,5 +29,9 @@
 	},
 	"projects": {
 		"title": "Projekty"
+	},
+	"message": {
+		"not_found": "Nie znaleziono",
+		"is_error": "Błąd podczas wczytywania..."
 	}
 }
