refactor: tags pos

--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -30,7 +30,7 @@
 	"projects": {
 		"title": "Projekty",
 		"demo": "Podgląd na żywo",
-		"product": "Kup {{amount}} {{currency}}"
+		"product": "Kup teraz! ({{amount}} {{currency}})"
 	},
 	"message": {
 		"not_found": "Nie znaleziono",
